@@ -1,3 +1,5 @@
+	* startup/bspclean.c: Revert patch with test code.
+
 2007-12-11	Joel Sherrill <joel.sherrill@OARcorp.com>
 
 	* irq/irq.c: Revert accidentally committed test code.
